@startuml

title __BATCH's Class Diagram__\n

  namespace org.factcast.highlevel {
    namespace batch {
      class org.factcast.highlevel.batch.BatchAbortedException {
          + BatchAbortedException()
          + BatchAbortedException()
          {static} + wrap()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace batch {
      class org.factcast.highlevel.batch.DefaultPublishBatch {
          - executed : AtomicBoolean
          - toPublish : List<Supplier<Fact>>
          + DefaultPublishBatch()
          + add()
          + add()
          + close()
          + execute()
          + execute()
          + markAborted()
          + markAborted()
      }
    }
  }
  

  namespace org.factcast.highlevel {
    namespace batch {
      interface org.factcast.highlevel.batch.PublishBatch {
          {abstract} + add()
          {abstract} + add()
          {abstract} + close()
          {abstract} + execute()
          {abstract} + execute()
          {abstract} + markAborted()
          {abstract} + markAborted()
      }
    }
  }
  

  org.factcast.highlevel.batch.DefaultPublishBatch .up.|> org.factcast.highlevel.batch.PublishBatch
  org.factcast.highlevel.batch.DefaultPublishBatch o-- org.factcast.highlevel.batch.BatchAbortedException : abortedException
  org.factcast.highlevel.batch.DefaultPublishBatch o-- org.factcast.core.FactCast : fc
  org.factcast.highlevel.batch.DefaultPublishBatch o-- org.factcast.highlevel.serializer.EventSerializer : serializer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
